# basic-player

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
source/common/: common.hpp  ffmpeg.hpp
source/controller/: Controller.cpp  Controller.hpp
source/decoder/: DecoderVideo.cpp  DecoderVideo.hpp
source/demuxer/: Demuxer.cpp  Demuxer.hpp
source/displayer/: DisplayerVideo.cpp  DisplayerVideo.hpp
source/drivers/: IDisplayer.hpp
source/drivers/oled/SSD1306/: SSD1306.cpp  SSD1306.hpp
source/drivers/tft/ST7735S/: ST7735S.cpp  ST7735S.hpp
source/filter/: FilterProcessor.cpp  FilterProcessor.hpp
source/loader/: Loader.cpp  Loader.hpp
source/player/: BlockingQueue.hpp  PlayerCore.cpp  PlayerCore.hpp
source/renderer/: RendererVideo.cpp  RendererVideo.hpp
source/tools/: SaveFrame.cpp  SaveFrame.hpp
